--- a/.github/workflows/cargo.yml
+++ b/.github/workflows/cargo.yml
@@ -7,12 +7,9 @@ env:
 
 jobs:
   build:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v5
       - uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: stable
@@ -20,8 +17,8 @@ jobs:
       - name: Build
         run: cargo build
       - name: Run tests
-        run: cargo test-all
+        run: cargo test
       - name: Format
         run: cargo fmt --all -- --check
       - name: Clippy
-        run: cargo lint
+        run: cargo clippy -- -D warnings
